reorganized baseline pipeline

--- a/baseline_aggregate_and_infer.ipynb
+++ b/baseline_aggregate_and_infer.ipynb
@@ -24,7 +24,6 @@
     "    models = {}\n",
     "    for file_name in os.listdir(models_folder):\n",
     "        if file_name.endswith(\".joblib\"):\n",
-    "            # Extract model name and cancer type from the filename\n",
     "            model_name, cancer_type = file_name.split(\"_\")\n",
     "            model_path = os.path.join(models_folder, file_name)\n",
     "            models[(model_name, cancer_type)] = joblib.load(model_path)\n",
@@ -42,11 +41,9 @@
     "    \"\"\"Load and preprocess new data.\"\"\"\n",
     "    # Load the data\n",
     "    data = pd.read_csv(new_data_path)\n",
-    "    \n",
-    "    # Drop unnecessary columns (adjust this based on your dataset structure)\n",
     "    X = data.drop(['cancer_type', 'type'], axis=1, errors='ignore')\n",
     "    \n",
-    "    # Standardize the data\n",
+    "    # standardize the data\n",
     "    if scaler is None:\n",
     "        scaler = StandardScaler()\n",
     "        X_scaled = scaler.fit_transform(X)\n",
@@ -65,7 +62,7 @@
     "def run_inference(models, test_data_path, scalers_folder=\"Scalers\"):\n",
     "    # Load the test data\n",
     "    test_df = pd.read_csv(test_data_path)\n",
-    "    test_features = test_df.drop(['cancer_type', 'type'], axis=1)  # Drop label columns if they exist\n",
+    "    test_features = test_df.drop(['cancer_type', 'type'], axis=1)\n",
     "\n",
     "    # List all scaler files in the Scalers folder\n",
     "    scaler_files = [f for f in os.listdir(scalers_folder) if f.endswith('.joblib')]\n",
