--- a/baseline_train_and_evaluate.ipynb
+++ b/baseline_train_and_evaluate.ipynb
@@ -55,27 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pca_data(X, n_components):\n",
-    "    # Apply PCA (assumes X is already standardized)\n",
-    "    pca = PCA(n_components=n_components)\n",
-    "    X_pca = pca.fit_transform(X)\n",
-    "    return X_pca, pca"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_model(model, model_name, cancer_type, folder=\"Models\"):\n",
     "    \"\"\"Save the model to a file using joblib.\"\"\"\n",
     "    if not os.path.exists(folder):\n",
-    "        os.makedirs(folder)  # Create directory if it doesn't exist\n",
+    "        os.makedirs(folder)\n",
     "    model_filename = f\"{folder}/{model_name}_{cancer_type}.joblib\"\n",
     "    joblib.dump(model, model_filename)\n",
     "    print(f\"Model {model_name} saved to {model_filename}\")"
@@ -83,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,12 +92,11 @@
     "        # Save the best model\n",
     "        save_model(best_model, model_name, cancer_type)\n",
     "\n",
-    "        # Perform LOOCV\n",
+    "        # perform LOOCV\n",
     "        for train_index, test_index in loo.split(X):\n",
     "            X_train, X_test = X[train_index], X[test_index]\n",
     "            y_train, y_test = y[train_index], y[test_index]\n",
     "\n",
-    "            # Fit and predict with the best model\n",
     "            best_model.fit(X_train, y_train)\n",
     "            y_pred = best_model.predict(X_test)\n",
     "\n",
@@ -119,7 +105,7 @@
     "            all_y_true.extend(y_test)\n",
     "            all_y_pred.extend(y_pred)\n",
     "\n",
-    "        # Compute overall statistics\n",
+    "        # overall stats\n",
     "        avg_score = np.mean(fold_scores)\n",
     "        classification_report_dict = classification_report(all_y_true, all_y_pred, output_dict=True)\n",
     "\n",
@@ -159,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
