--- a/baseline_visualize_logistic_model.ipynb
+++ b/baseline_visualize_logistic_model.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,15 +21,14 @@
     "models_folder = \"Models\"  # Path to the folder containing model files\n",
     "test_data_path = \"TestDataset/test_data.csv\"  # Path to test data\n",
     "output_folder = \"FeatureWeights\"  # Folder to save output CSVs\n",
-    "os.makedirs(output_folder, exist_ok=True)  # Create output folder if it doesn't exist\n",
+    "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
-    "# Load feature names from the test data\n",
     "feature_names = pd.read_csv(test_data_path, nrows=0).columns.tolist()[2:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -71,11 +70,10 @@
     "        model_path = os.path.join(models_folder, model_file)\n",
     "        print(f\"Processing model: {model_file}\")\n",
     "        \n",
-    "        # Load the logistic regression model\n",
     "        model = joblib.load(model_path)\n",
     "\n",
     "        # Extract coefficients\n",
-    "        coefficients = model.coef_[0]  # Assuming binary classification; modify for multi-class\n",
+    "        coefficients = model.coef_[0]\n",
     "        \n",
     "        # Pair feature names with coefficients\n",
     "        feature_weights = pd.DataFrame({\n",
@@ -83,10 +81,8 @@
     "            \"Weight\": coefficients\n",
     "        })\n",
     "\n",
-    "        # Sort by weight\n",
     "        feature_weights = feature_weights.sort_values(by=\"Weight\", ascending=False)\n",
     "\n",
-    "        # Save to CSV\n",
     "        output_file = os.path.join(output_folder, f\"{os.path.splitext(model_file)[0]}_weights.csv\")\n",
     "        feature_weights.to_csv(output_file, index=False)\n",
     "\n",
@@ -107,7 +103,7 @@
     "    # Iterate through all CSV files in the FeatureWeights folder\n",
     "    for file_name in os.listdir(feature_weights_folder):\n",
     "        if file_name.endswith(\"_weights.csv\"):\n",
-    "            cancer_type = file_name.split(\"_weights.csv\")[0]  # Extract cancer type from the file name\n",
+    "            cancer_type = file_name.split(\"_weights.csv\")[0]\n",
     "            \n",
     "            # Load feature weights\n",
     "            file_path = os.path.join(feature_weights_folder, file_name)\n",
@@ -141,17 +137,15 @@
     "                )\n",
     "            combined_data.append(row)\n",
     "    \n",
-    "    # Create a DataFrame for the combined data\n",
-    "    combined_df = pd.DataFrame(combined_data)\n",
-    "    \n",
     "    # Save to a CSV file\n",
+    "    combined_df = pd.DataFrame(combined_data)\n",
     "    combined_df.to_csv(output_file, index=False)\n",
     "    print(f\"Combined feature weights saved to: {output_file}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -164,10 +158,9 @@
    ],
    "source": [
     "# Specify input and output paths\n",
-    "feature_weights_folder = \"FeatureWeights\"  # Folder containing individual feature weights CSVs\n",
-    "output_file = \"CombinedFeatureWeights.csv\"  # Output file for the combined results\n",
+    "feature_weights_folder = \"FeatureWeights\"\n",
+    "output_file = \"CombinedFeatureWeights.csv\" \n",
     "\n",
-    "# Call the function\n",
     "combine_feature_weights(feature_weights_folder, output_file)"
    ]
   }
